# sdp-test

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/sdp_test/: __init__.py  bundle.py  model_sql.py  pipelines_shim.py  pytest_plugin.py  spec_models.py  spec_runner.py
tests/: conftest.py  test_bundle.py  test_integration.py  test_pytest_plugin.py  test_spec_runner.py
