[project]
name = "sdp-test"
version = "0.1.0"
description = "Declarative unit testing framework for Spark Declarative Pipelines (Databricks Lakeflow)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "GoDataDriven", email = "info@godatadriven.com" },
]
keywords = ["databricks", "lakeflow", "spark", "testing", "pipelines", "declarative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml",
    "pydantic>=2.10.0",
    "pyspark>=4.1",
]

[project.optional-dependencies]
databricks = [
    "pyspark[pipelines]>=4.1",
]

[project.entry-points."pytest11"]
sdp_test = "sdp_test.pytest_plugin"

[project.urls]
Homepage = "https://github.com/godatadriven/sdp-test"
Repository = "https://github.com/godatadriven/sdp-test"
Issues = "https://github.com/godatadriven/sdp-test/issues"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdp_test"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
