[project]
name = "sdp-test"
version = "0.2.0"
description = "Declarative unit testing for Spark Declarative Pipelines (SDP) and Lakeflow Declarative Pipelines (LDP)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Daniël Tom", email = "daniel.tom@xebia.com" },
]
keywords = ["spark", "testing", "pipelines", "declarative", "declarative pipelines", "sdp", "unit testing", "test framework", "pytest", "databricks", "lakeflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml",
    "pydantic>=2.10.0",
    "sqlglot>=30.0.3",
]

[project.optional-dependencies]
spark = [
    "pyspark[pipelines]>=4.1",
]

[project.entry-points."pytest11"]
sdp_test = "sdp_test.pytest_plugin"

[project.urls]
Homepage = "https://github.com/godatadriven/sdp-test"
Repository = "https://github.com/godatadriven/sdp-test"
Issues = "https://github.com/godatadriven/sdp-test/issues"

[dependency-groups]
dev = [
    "pyspark[pipelines]>=4.1",
    "pytest",
    "ruff",
    "ty>=0.0.21",
    "pre-commit>=4.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdp_test"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ty.environment]
python = ".venv"

[tool.ruff]
line-length = 120
